# project-2022-part3

./: CMakeLists.txt  README.md
lib/arguments/: CMakeLists.txt  arguments.hpp
lib/optimization/: CMakeLists.txt  optimization.hpp
lib/polyline/: CMakeLists.txt  polyline.hpp
main/: CMakeLists.txt  main.cpp
src/: arguments.cpp  optimization.cpp  polyline.cpp
